--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-ыщгasgiref==3.8.1
+asgiref==3.8.1
 asttokens==2.4.1
 decorator==5.1.1
-Django==5.0.6
+Django==4.2.2
 executing==2.0.1
 ipython==8.26.0
 jedi==0.19.1
